# vaani-banking-voice-assistant

./: .dockerignore  .env.example  .gitignore  .vercelignore  CHECK_BACKEND_LOGS.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  INVESTMENT_SCHEMES_COMPLETE.md  INVESTMENT_SCHEMES_IMPLEMENTATION.md  LOCAL_VS_VERCEL.md  QUICK_DEBUG_UPI_MODE.md  README.docker.md  README.md  ROUND_2_SUBMISSION.md  SUBMISSION_SUMMARY.md  VERCEL_AI_BACKEND_FIX.md  VERCEL_BACKEND_SETUP.md  VERCEL_DEPLOYMENT_SIZE_FIX.md  VERCEL_DEPLOYMENT_STEPS.md  VERCEL_DUPLICATE_BUILD_FIX.md  VERCEL_RAG_ENABLED.md  VERCEL_SETUP_SUMMARY.md  ai_main.py  build-backend.sh  docker-compose.yml  main.py  nginx.conf.corrected  pyproject.toml  requirements-backend.txt  requirements.txt  run_services.py  vercel-ai.json  vercel-build-ai.sh  vercel-build.sh  vercel.backend.json  vercel.json
ai/: .dockerignore  .env.example  .env.production.example  .vercelignore  ARCHITECTURE_DIAGRAM.md  Dockerfile  QUICK_REFERENCE.md  __init__.py  config.py  ingest_documents.py  ingest_documents_hindi.py  ingest_investment_documents.py  main.py  requirements-vercel.txt  requirements.txt  run.sh  test_rag_faq.py  test_rag_service_cache.py  vercel.ai.json
backend/: .dockerignore  .env.production.example  Dockerfile  Procfile  __init__.py  app.py  fix_password.py  main.py  requirements.txt
docs/: DEPLOYMENT_VERSEL.md  HELLO_UPI_FLOW.md  UPI_MODE_DEBUGGING.md  voice-device-binding.md
documentation/: ai-architecture.md  ai_architecture.md  ai_architecture.mmd  ai_modules.md  backend-architecture.md  backend-architecture.mmd  backend_architecture.md  backend_architecture.mmd  backend_modules.md  demo_logging_guide.md  dokku_cloudflare_deployment.md  frontend-architecture.md  frontend-architecture.mmd  frontend_architecture.md  frontend_modules.md  hindi_support.md  hybrid_supervisor_architecture.mmd  hybrid_supervisor_pattern.md  index.md  investment_schemes.md  setup_guide.md  system_architecture.md  system_architecture.mmd  upi_payment_flow.md
documents/: hybrid_supervisor_architecture.mmd  hybrid_supervisor_pattern.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json
ios-app/: .gitignore  APPSTATE_FIX.md  APP_ICON_README.md  APP_ICON_SETUP.md  ARCHITECTURE.md  COMPLETE_SUMMARY.md  DOC_INDEX.md  ERROR_FIX_SUMMARY.md  FIX_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INFO_PLIST_SETUP.md  INFO_PLIST_SUMMARY.md  INTEGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FIX_APPLIED.md  SETUP_CHECKLIST.md  START_HERE.txt  TESTING_GUIDE.md  XCODE_SETUP_CHECKLIST.md  generate-app-icons.py  generate-app-icons.sh  iOS_SETUP_COMPLETE.md  manage-plist.sh  quick-commands.sh  setup-simctl.sh  validate-fix.sh
(+275 files in other folders)
