[project]
name = "ai-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=19.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "passlib>=1.7.4",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]
