[project]
name = "ai-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=19.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0,<0.28.0",
    "passlib>=1.7.4",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.31.0",
    "resemblyzer>=0.1.2",
    "librosa>=0.10",
    "soundfile>=0.12",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "ollama==0.3.3",
    "azure-cognitiveservices-speech==1.40.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "chromadb>=0.4.22",
    "langchain-chroma>=0.1.2",
    "pypdf>=3.17.0",
    "sentence-transformers>=2.2.2",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv==1.0.1",
    "tenacity==8.5.0",
    "redis==5.1.1",
    "structlog==24.4.0",
    "sentry-sdk==2.15.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "langchain-ollama>=0.2.0",
    "gunicorn>=23.0.0",
    "starlette>=0.27.0",
    "bcrypt>=4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "setuptools>=68.0.0",
]
